<resources>
    <string name="app_name">MyTelegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_user_default_name">Mukhiddin Mobile Dev</string>
    <string name="settings_status_online">в сети</string>
    <string name="settings_account_title">Аккаунт</string>
    <string name="settings_default_phone_num">+998 99 868 3888</string>
    <string name="settings_label_phone_num">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_login">\@MMMz0</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немнога о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="register_label_text_enter_code">Введите код</string>
    <string name="register_check_text_enter_code">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_default_num_code">---------</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone_num">Введите номер телефона</string>
    <string name="register_enter_phone_num">Введите номер телефона</string>
    <string name="edit_first_name">Имя</string>
    <string name="edit_surname">Фамилия</string>
    <string name="settings_toast_emty_name">Имя не может быть пустым</string>
</resources>