<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.Fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/accent"
        android:scaleType="centerCrop"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register_text_label_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_label_text_enter_code"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/material_drawer_item_primary_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_image" />

    <TextView
        android:id="@+id/register_text_enter_code_check"
        android:text="@string/register_check_text_enter_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_label_enter_code"
        style="@style/small_norm_text"
        />

    <EditText
        android:id="@+id/register_input_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text_enter_code_check"
        style="@style/editTextPhone"
        android:maxLength="6"
        android:textColorHint="@color/primary"
        android:hint="@string/register_default_num_code"
        />

</androidx.constraintlayout.widget.ConstraintLayout>